--- a/ListyCity/local.properties
+++ b/ListyCity/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 07 02:55:15 MDT 2025
-sdk.dir=/Users/re/Library/Android/sdk
+#Wed Feb 04 00:15:21 MST 2026
+sdk.dir=C\:\\Users\\87che\\AppData\\Local\\Android\\Sdk
